[tool.poetry]
name = "tg-channel-aggregator"
version = "0.2.0"
description = "aggregate channels"
authors = ["Dmitriy Zharikhin <dzharikhin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.40.0"
qrcode = "^8.2"
pillow = "^11.3.0"
eciespy = "^0.4.4"
persist-queue = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
